# 6G7V0018_2425_1F-extension_project

./: README.md  kill_gazebo.sh  run.sh
src/extension_project/: CMakeLists.txt  package.xml
src/extension_project/launch/: camera_detection.launch  main_scene.launch
src/extension_project/scripts/: camera.py
src/extension_project/urdf/: table_with_markers.urdf
